Refactor class and method naming conventions for consistency

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 .idea
 *.iml
+
+# Compiled class files
+*.class
+out/
+target/
+build/
+
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Generated dictionary files
+dictionary/japanese/kanwadict.dat
