Add Excel file extensions to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ gradle-app.setting
 !gradle-wrapper.jar
 !gradle-wrapper.properties
 !gradle/wrapper/gradle-wrapper.jar
+
+# Excel files
+*.xlsx
+*.xls
