Implement long vowel handling in romaji processing and update comment styles

--- a/build.gradle
+++ b/build.gradle
@@ -82,4 +82,9 @@ license {
 
     // Enable verbose output to detect files without license headers
     ext.verbose = true
+    
+    // Use block comment style instead of Javadoc
+    mapping {
+        java = 'SLASHSTAR_STYLE'
+    }
 }
