--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ jar {
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+    manifest {
+        attributes 'Main-Class': 'com.iciao.kanada.Kanada'
+    }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
