Refactor LLM clients and configuration: enhance model configuration handling and improve context extraction for better readability

--- a/src/main/resources/llm-config.json
+++ b/src/main/resources/llm-config.json
@@ -1,58 +1,36 @@
 {
   "openai": {
-    "defaultModel": "gpt-4o-mini",
+    "defaultModel": "gpt-5-mini",
     "apiUrl": "https://api.openai.com/v1",
-    "systemPrompt": "あなたは日本語の文章の最適な読み方を文脈から判断するAIです。\n指定した語句のふりがなとして適切なものを選択肢から１つ選んでください。\n選択したふりがなだけを回答してください。説明は不要です。",
-    "userPromptTemplate": "文章: {context}\n語句: {kanji} （この部分だけのふりがな）\n選択肢: {readings}",
-    "models": {
-      "gpt-4o-mini": {
-        "modelName": "GPT-4o Mini",
-        "modelDescription": "OpenAI's cost-effective model with good performance for most tasks"
-      },
-      "gpt-4o": {
-        "modelName": "GPT-4o",
-        "modelDescription": "OpenAI's most capable multimodal model with superior reasoning"
-      }
-    }
+    "systemPrompt": "あなたは日本語の文章の最適な読み方を文脈から判断するAIです。\n文章中の[[...]]で囲まれた語句の読み方として適切なものを選択肢から1つ選んでください。\n選択した読み方だけを回答してください。説明は不要です。",
+    "userPromptTemplate": "文章: {context}\n語句: [[{kanji}]] （この部分の読み方）\n読み方の選択肢: {readings}"
   },
   "ollama": {
     "defaultModel": "qwen3:1.7b",
     "apiUrl": "http://localhost:11434",
-    "promptTemplate": "You are an AI that teaches how to read Japanese sentences.\nChoose the most appropriate reading of [{kanji}] for the context of the following sentence.\nSelect one from the options.\n\nSentence: {context}\nOptions: {readings}\n\nDo not explain. Just show the answer in hiragana.\n",
+    "promptTemplate": "You are an AI that teaches how to read Japanese sentences.\nChoose the most appropriate reading of [[{kanji}]] for the context of the following sentence.\nSelect one from the options.\n\nSentence: {context}\nTarget: [[{kanji}]] (Reading of this part)\nOptions: {readings}\n\nDo not explain. Just show the answer in hiragana.\n",
     "models": {
-      "phi3:mini": {
-        "modelName": "Phi-3 Mini (3.8B)",
-        "modelDescription": "Phi-3 is a family of lightweight 3B (Mini) and 14B (Medium) state-of-the-art open models by Microsoft.",
-        "promptTemplate": "You are an AI that teaches how to read Japanese sentences.\nChoose the most appropriate reading of [{kanji}] for the context of the following sentence.\nSelect one from the options.\n\nSentence: {context}\nOptions: {readings}\n\nDo not explain. Just show the answer in hiragana."
-      },
-      "gemma3n:e4b": {
-        "modelName": "Gemma 3n (Effective 4B)",
-        "modelDescription": "Gemma 3n models are designed for efficient execution on everyday devices such as laptops, tablets or phones.",
-        "promptTemplate": "Task: Japanese kanji reading selection\n\nAnalyze the context and select the correct reading for [{kanji}].\n\nContext: {context}\nOptions: {readings}\n\nProvide only the hiragana reading from the options above."
+      "phi4-mini:3.8b": {
+        "modelName": "Phi-4 Mini (3.8B)",
+        "promptTemplate": "文章中の[[...]]で囲まれた語句の読み方として適切なものを選択肢から1つ選んでください。\n\n文章: {context}\n語句: [[{kanji}]] （この部分の読み方）\n選択肢: {readings}\n\n選択した読み方だけを回答してください。説明は不要です。"
       },
       "qwen3:1.7b": {
         "modelName": "Qwen 3 (1.7B)",
         "modelDescription": "Alibaba's 1.7B parameter model with strong multilingual capabilities",
-        "promptTemplate": "指定した語句の ふりがな として適切なものを選択肢から１つ選んでください。\n\n文章: {context}\n語句: {kanji} （この部分だけの ふりがな）\n選択肢: {readings}\n\n選択した ふりがな だけを回答してください。説明は不要です。\n/no_think"
+        "promptTemplate": "文章中の[[...]]で囲まれた語句の読み方として適切なものを選択肢から1つ選んでください。\n\n文章: {context}\n語句: [[{kanji}]] （この部分の読み方）\n選択肢: {readings}\n\n選択した読み方だけを回答してください。説明は不要です。\n/no_think"
       }
     }
   },
   "claude": {
     "defaultModel": "claude-3-haiku-20240307",
     "apiUrl": "https://api.anthropic.com/v1",
-    "systemPrompt": "あなたは日本語の文章の最適な読み方を文脈から判断するAIです。\n指定した語句のふりがなとして適切なものを選択肢から１つ選んでください。\n選択したふりがなだけを回答してください。説明は不要です。",
-    "userPromptTemplate": "文章: {context}\n語句: {kanji} （この部分だけのふりがな）\n選択肢: {readings}"
+    "systemPrompt": "あなたは日本語の文章の最適な読み方を文脈から判断するAIです。\n文章中の[[...]]で囲まれた語句の読み方として適切なものを選択肢から1つ選んでください。\n選択した読み方だけを回答してください。説明は不要です。",
+    "userPromptTemplate": "文章: {context}\n語句: [[{kanji}]] （この部分の読み方）\n読み方の選択肢: {readings}"
   },
   "lmstudio": {
     "defaultModel": "google/gemma-3-1b",
     "apiUrl": "http://127.0.0.1:1234/v1",
-    "systemPrompt": "You are an AI that teaches the correct way to read Japanese sentences.\nPlease select the correct furigana for the target part from the given options.\nPlease answer only with the furigana you have chosen. No explanation is necessary.",
-    "userPromptTemplate": "Sentence: {context}\nTarget: {kanji} (Furigana for this part）\nOptions: {readings}",
-    "models": {
-      "google/gemma-3-1b": {
-        "modelName": "Gemma 3 1B Instruct Qat",
-        "modelDescription": "Tiny text-only variant of Gemma 3: Google's latest open-weight model family"
-      }
-    }
+    "systemPrompt": "You are an AI that teaches how to read Japanese sentences.\nChoose the most appropriate reading of [[{kanji}]] for the context of the following sentence.\nSelect one from the options.\nDo not explain. Just show the answer in hiragana.",
+    "userPromptTemplate": "Sentence: {context}\nTarget: [[{kanji}]] (Reading of this part)\nOptions: {readings}"
   }
 }
